service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-i
spec:
  type: NodePort
  selector:
    app: whoami-i
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
