ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "public"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: whoami-i
spec:
  rules:
  - host: whoami.ublab.unibe.ch 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-i
            port: 
              number: 8000
